--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,4 @@
 name: seo_web
-description: A new Flutter project.
 
 version: 1.0.0+1
 
@@ -14,7 +13,6 @@ dependencies:
   retrofit: ^4.0.3
   auto_route: ^6.1.0
   flutter_bloc: ^8.1.2
-  flutter_riverpod: ^2.3.4
   regexed_validator: ^2.0.0+1
   dio: ^5.1.1
   equatable: ^2.0.5
@@ -26,10 +24,13 @@ dependencies:
   elementary: ^3.0.0
   elementary_helper: ^1.0.1
   freezed_annotation: ^2.4.1
+  pretty_dio_logger: ^1.3.1
+  uuid: ^4.3.1
   tele_web_app:
     git: https://github.com/yeikel16/tele_web_app.git
 
-
+dependency_overrides:
+  meta: ^1.11.0
   
 
 dev_dependencies:
