--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 
 dependencies:
   flutter:
+    sdk: flutter    
+  flutter_localizations:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
@@ -14,18 +16,24 @@ dependencies:
   auto_route: ^6.1.0
   flutter_bloc: ^8.1.2
   regexed_validator: ^2.0.0+1
-  dio: ^5.1.1
+  dio: ^5.0.0
   equatable: ^2.0.5
   provider: ^6.0.5
   json_annotation: ^4.8.1
   decimal: ^2.3.3
   flutter_secure_storage: ^9.0.0
   rxdart: ^0.27.7
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
+  intl: ^0.18.1
   elementary: ^3.0.0
   elementary_helper: ^1.0.1
   freezed_annotation: ^2.4.1
   pretty_dio_logger: ^1.3.1
   uuid: ^4.3.1
+  intl_utils: ^2.8.5
+  logging: ^1.2.0
+  flutter_svg: ^2.0.9
   tele_web_app:
     git: https://github.com/yeikel16/tele_web_app.git
 
@@ -48,17 +56,19 @@ dev_dependencies:
 
 
 
-
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/auth/e-commerce-logo.png"
   min_sdk_android: 21
 
 flutter:
-
+  generate: true
 
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/svg/
 
   fonts:
     - family: Lexend
