--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Dart
 
 on:
@@ -31,5 +26,8 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Start release build
+      - name: Start release bundle build
         run: flutter build appbundle
+        
+      - name: Start release apk build
+        run: flutter build apk --release
