--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,9 +74,53 @@ flutter:
     - assets/svg/
 
   fonts:
-    - family: Lexend
+    - family: BottomBarIcons
       fonts:
-        - asset: fonts/Lexend-Regular.ttf
-        - asset: fonts/Lexend-Bold.ttf
+        - asset: fonts/BottomBarIcons.ttf
+    - family: Inter
+      fonts:
+        - asset: fonts/Inter.ttf
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat/Montserrat-Thin.ttf
+          weight: 100
+        - asset: fonts/Montserrat/Montserrat-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Montserrat/Montserrat-Light.ttf
+          weight: 300
+        - asset: fonts/Montserrat/Montserrat-Regular.ttf
+          weight: 400
+        - asset: fonts/Montserrat/Montserrat-Medium.ttf
+          weight: 500
+        - asset: fonts/Montserrat/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Montserrat/Montserrat-Bold.ttf
           weight: 700
+        - asset: fonts/Montserrat/Montserrat-ExtraBold.ttf
+          weight: 800
+
+        - asset: fonts/Montserrat/Montserrat-ThinItalic.ttf
+          weight: 100
+          style: italic
+        - asset: fonts/Montserrat/Montserrat-ExtraLightItalic.ttf
+          weight: 200
+          style: italic
+        - asset: fonts/Montserrat/Montserrat-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: fonts/Montserrat/Montserrat-Regular.ttf
+          weight: 400
+          style: italic
+        - asset: fonts/Montserrat/Montserrat-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: fonts/Montserrat/Montserrat-SemiBoldItalic.ttf
+          weight: 600
+          style: italic
+        - asset: fonts/Montserrat/Montserrat-BoldItalic.ttf
+          weight: 700
+          style: italic
+        - asset: fonts/Montserrat/Montserrat-ExtraBoldItalic.ttf
+          weight: 800
+          style: italic
 
