--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter    
   flutter_localizations:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter 
 
   cupertino_icons: ^1.0.2
   retrofit: ^4.0.3
