--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
+        - name: Start unit test
+        run: flutter test
+
+        - name: Start integration test
+        run: flutter test integration_test
+
       - name: Start release bundle build
         run: flutter build appbundle
         
