fixed some web errors, added pwa support

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,26 @@
-server {
-    listen  8080;
-    server_name  seo-web.ru;
+events {}
+http {
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/mime.types;
 
-    location / {
-        try_files $uri /index.html;
-    }
+    gzip  on;
+    gzip_comp_level 7;
 
-    location /robots.txt {
-        alias  /usr/share/nginx/html/robots.txt;
+    server {
+        listen  8080;
+
+         location / {
+            try_files $uri /index.html;
+        }
+
+        location /robots.txt {
+            alias  /usr/share/nginx/html/robots.txt;
+        }
+
+        location /botd-1.1.0.js {
+            default_type application/javascript;
+            alias /usr/share/nginx/html/botd-1.1.0.js;
+        }
+
     }
 }
