fixed loading indicator bug

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,16 +1,23 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+        listen    80;
+        listen [::]:80;
+        server_name Seo-Web;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
+        location /robots.txt {
+            alias  /usr/share/nginx/html/robots.txt;
+        }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /botd-1.1.0.js {
+            default_type application/javascript;
+            alias /usr/share/nginx/html/botd-1.1.0.js;
+        }
+
     }
-}
+   
