--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   json_annotation: ^4.8.1
   decimal: ^2.3.3
   flutter_secure_storage: ^9.0.0
-  rxdart: ^0.27.7
+  rxdart: ^0.28.0
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   elementary: ^3.0.0
   elementary_helper: ^1.0.1
   freezed_annotation: ^2.4.1
@@ -47,6 +47,7 @@ dependencies:
 
 dependency_overrides:
   meta: ^1.11.0
+  analyzer: ^5.9.0
   
 
 dev_dependencies:
@@ -55,11 +56,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   build_runner: ^2.3.3
   auto_route_generator: ^6.1.0
-  flutter_launcher_icons: "^0.13.0"
-  retrofit_generator: ^8.0.6
+  flutter_launcher_icons: ^0.14.1
+  retrofit_generator: ^9.1.2
   json_serializable: ^6.7.1
   freezed: ^2.4.6
   elementary_test: ^2.0.0
